api_auth_trying
